Add create instace api structure
